--- a/src/app/components/forms/user-management-form/user-Info-form/user-info-form.component.html
+++ b/src/app/components/forms/user-management-form/user-Info-form/user-info-form.component.html
@@ -65,6 +65,7 @@
           addonWidth="7rem"
           class="flex-1"
           placeholder="شماره موبایل کاربر"
+          validationField="mobile"
           [control]="getUserFormControl('phone')"
         />
       </div>
@@ -102,7 +103,7 @@
     >
       <app-button
         (click)="submitUserInfo()"
-        [disabled]="userInfoForm.invalid || loading()"
+        [disabled]="!isFormValidExcept('id') || loading()"
         label="ثبت و ویرایش"
         styleClass="my-2 md:my-0 text-xs md:text-sm lg:text-base w-full md:w-36 lg:w-40"
       ></app-button>
