refactor(announcement-sub-group-form):refactor table use table component and confirm message

--- a/src/app/components/forms/announcement-management-form/announcement-sub-group-form/announcement-sub-group-form.component.html
+++ b/src/app/components/forms/announcement-management-form/announcement-sub-group-form/announcement-sub-group-form.component.html
@@ -14,17 +14,9 @@
 </div>
 
 <!-- 📋 SubGroup Table -->
-<p-table
-  class="col-span-12 overflow-x-auto"
-  [columns]="cols"
-  [value]="displayAnnouncementsSubGroup"
-  [tableStyle]="tableUi.tableStyle"
-  [paginator]="tableUi.paginator"
-  [paginatorLocale]="tableUi.paginatorLocale"
-  [rows]="tableUi.rows"
-  [rowsPerPageOptions]="tableUi.rowsPerPageOptions"
-  [stripedRows]="tableUi.stripedRows"
->
+<app-table
+    [enableCaptionButton]="true" (clickCaptionButton)="onNew()"
+    [columns]="columns" [rows]="displayAnnouncementsSubGroup">
   <!-- Header with New Button -->
   <!-- Table Header -->
   <ng-template #caption>
@@ -80,7 +72,7 @@
       </td>
     </tr>
   </ng-template>
-</p-table>
+</app-table>
 
 <!-- 📝 Dialog for Add/Edit -->
 <p-dialog
