--- a/src/app/components/forms/driver-load-management-form/driver-load-allocation-form/driver-load-allocation-form.component.html
+++ b/src/app/components/forms/driver-load-management-form/driver-load-allocation-form/driver-load-allocation-form.component.html
@@ -2,11 +2,17 @@
   <!-- Loop over allocations -->
   @for (load of loadAllocations(); track $index) {
     <p-card
-      class="w-[90%] min-w-[300px] max-w-[450px] mb-3 shadow-md rounded-2xl bg-emphasis"
+      class="w-[90%] min-w-[300px] max-w-[450px] mb-3 shadow-md rounded-2xl"
+      [class]="getRowColor(load.LoadAllocationStatusColor ?? 'BLACK')"
     >
       <!-- Header: Good title + Priority -->
       <div class="flex justify-between items-center mb-2">
+        <div class="flex gap-3">
         <span class="font-bold text-lg">{{ load.GoodTitle || "---" }}</span>
+        <span class="flex items-center justify-center px-3 py-1 text-xs md:text-sm rounded-full bg-highlight  border border-blue-300">
+                {{ 'اولویت ' + load.Priority }}
+        </span>
+        </div>
         <span class="text-sm px-2 py-0.5 rounded-full bg-highlight">
           {{load.LAId}}
         </span>
@@ -19,14 +25,15 @@
           {{ load.TargetCityTitle || "---" }}
         </div>
         <div>تناژ: {{ load.Tonaj || "-" }}</div>
-        <div>شرکت: {{ load.TransportCompanyTitle || "-" }}</div>
+        <div>شرکت حمل و نقل: {{ load.TransportCompanyTitle || "-" }}</div>
         <div>
-          بارگیری: {{ load.LoadingPlaceTitle || "-" }} | تخلیه:
+          محل بارگیری: {{ load.LoadingPlaceTitle || "-" }} | محل تخلیه:
           {{ load.DischargingPlaceTitle || "-" }}
         </div>
         <div>گیرنده: {{ load.Recipient || "-" }}</div>
         <div>توضیحات: {{ load.Description || "-" }}</div>
         <div>آدرس: {{ load.Address || "-" }}</div>
+        <div>پارامترهای موثر: {{ load.TPTParamsJoint || "-" }}</div>
       </div>
     </p-card>
   }
