refactor(loads-announcement):change placeholder and label message

--- a/src/app/components/forms/load-management-form/loads-announcement-form/loads-announcement-form.component.html
+++ b/src/app/components/forms/load-management-form/loads-announcement-form/loads-announcement-form.component.html
@@ -18,8 +18,8 @@
   <!-- Load ID (Read-only) -->
   <app-text-input
     class="col-span-12 md:col-span-6 lg:col-span-4"
-    placeholder="کد مخزن"
-    label="کد مخزن"
+    placeholder="شناسه مخزن"
+    label="شناسه مخزن"
     [control]="ctrl('LoadId')"
     [addonWidth]="addonWidth"
     [readOnly]="true"
