--- a/src/app/components/forms/announcement-management-form/relation-of-announcement-group-and-sub-group/relation-of-announcement-group-and-sub-group.component.html
+++ b/src/app/components/forms/announcement-management-form/relation-of-announcement-group-and-sub-group/relation-of-announcement-group-and-sub-group.component.html
@@ -27,39 +27,11 @@
     [disabled]="announcementGroupId.value === -1"
   />
 </div>
-<p-table
-  [value]="relationsAnnouncement"
-  [columns]="cols"
-  [tableStyle]="tableUi.tableStyle"
-  [paginator]="tableUi.paginator"
-  [paginatorLocale]="tableUi.paginatorLocale"
-  [rows]="tableUi.rows"
-  [rowsPerPageOptions]="tableUi.rowsPerPageOptions"
-  [stripedRows]="tableUi.stripedRows"
+<app-table
+  [columns]="columns"
+  [rows]="relationsAnnouncement"
 >
-  <ng-template #header let-columns>
-    <tr>
-      @for (col of columns; track $index) {
-        <th>{{ col }}</th>
-      }
-    </tr>
-  </ng-template>
-
-  <ng-template #body let-rowData>
-    <tr>
-      <td (click)="onDelete(rowData)">
-        <app-button
-          icon="pi pi-trash"
-          severity="danger"
-          variant="text"
-          [disabled]="loading"
-        ></app-button>
-      </td>
-      <td>{{ rowData.AnnouncementTitle }}</td>
-      <td>{{ rowData.AnnouncementSGTitle }}</td>
-    </tr>
-  </ng-template>
-</p-table>
+</app-table>
 
 <div class="flex justify-end mt-5">
   <app-button
@@ -71,4 +43,3 @@
   ></app-button>
 </div>
 
-<p-confirm-dialog />
