--- a/src/app/components/forms/sequential-turns-management-form/relation-of-sequential-turn-to-loader-type-form/relation-of-sequential-turn-to-loader-type-form.component.html
+++ b/src/app/components/forms/sequential-turns-management-form/relation-of-sequential-turn-to-loader-type-form/relation-of-sequential-turn-to-loader-type-form.component.html
@@ -1,8 +1,8 @@
 <div class="grid grid-cols-12 gap-4 mb-5">
   <app-search-auto-complete
     class="col-span-12 sm:col-span-6"
-    placeholder="صفوف نوبت دهی"
-    label="صفوف نوبت دهی"
+    placeholder="صف نوبت"
+    label="صف نوبت"
     [control]="sequentialTitle"
     optionLabel="SeqTurnTitle"
     optionValue="SeqTurnTitle"
@@ -32,40 +32,7 @@
   />
 </div>
 
-<p-table
-  class="col-span-12"
-  [columns]="cols"
-  [value]="relationsAnnouncement"
-  [tableStyle]="tableUi.tableStyle"
-  [paginator]="tableUi.paginator"
-  [paginatorLocale]="tableUi.paginatorLocale"
-  [rows]="tableUi.rows"
-  [rowsPerPageOptions]="tableUi.rowsPerPageOptions"
-  [stripedRows]="tableUi.stripedRows"
->
-  <ng-template #header let-columns>
-    <tr>
-      @for (col of columns; track $index) {
-        <th>{{ col }}</th>
-      }
-    </tr>
-  </ng-template>
-
-  <ng-template #body let-rowData>
-    <tr>
-      <td (click)="onDelete(rowData)">
-        <app-button
-          icon="pi pi-trash"
-          severity="danger"
-          variant="text"
-          [disabled]="loading"
-        ></app-button>
-      </td>
-      <td>{{ rowData.SeqTurnTitle }}</td>
-      <td>{{ rowData.LoaderTypeTitle }}</td>
-    </tr>
-  </ng-template>
-</p-table>
+<app-table [rows]="relationsAnnouncement" [columns]="columns"> </app-table>
 
 <div class="w-full flex justify-end mt-5">
   <app-button
