--- a/src/app/components/forms/shared/wallet-payment-record-table/wallet-payment-record-table.component.html
+++ b/src/app/components/forms/shared/wallet-payment-record-table/wallet-payment-record-table.component.html
@@ -1,29 +1,1 @@
-<p-table
-  [value]="paymentHistory()"
-  [responsiveLayout]="'scroll'"
-   [tableStyle]="tableUi.tableStyle"
-  [paginator]="tableUi.paginator"
-  [paginatorLocale]="tableUi.paginatorLocale"
-  [rows]="tableUi.rows"
-  [rowsPerPageOptions]="tableUi.rowsPerPageOptions"
-  [stripedRows]="true"
-  >
-  <ng-template pTemplate="header">
-    <tr>
-      @for (c of columns; track c) {
-        <th>
-          {{ c.label }}
-        </th>
-      }
-    </tr>
-  </ng-template>
-  <ng-template pTemplate="body" let-row>
-    <tr>
-      @for (c of columns; track c) {
-        <td>
-          {{ row[c.key] }}
-        </td>
-      }
-    </tr>
-  </ng-template>
-</p-table>
+<app-table [columns]="columns" [rows]="paymentHistory()"/>
