refactor(wallet-transactions-table):add table component

--- a/src/app/components/forms/shared/wallet-transactions-table/wallet-transactions-table.component.html
+++ b/src/app/components/forms/shared/wallet-transactions-table/wallet-transactions-table.component.html
@@ -1,29 +1,1 @@
-<p-table
-  [value]="transactions()"
-  [responsiveLayout]="'scroll'"
-    [tableStyle]="tableUi.tableStyle"
-  [paginator]="tableUi.paginator"
-  [paginatorLocale]="tableUi.paginatorLocale"
-  [rows]="tableUi.rows"
-  [rowsPerPageOptions]="tableUi.rowsPerPageOptions"
-  [stripedRows]="tableUi.stripedRows"
-  >
-  <ng-template pTemplate="header">
-    <tr>
-      @for (c of columns; track c) {
-        <th>
-          {{ c.label }}
-        </th>
-      }
-    </tr>
-  </ng-template>
-  <ng-template pTemplate="body" let-row>
-    <tr [class]="getRowColor(row.TransactionColor)">
-      @for (c of columns; track c) {
-        <td class="whitespace-nowrap">
-          {{ row[c.key] }}
-        </td>
-      }
-    </tr>
-  </ng-template>
-</p-table>
+<app-table [rows]="transactions()" [columns]="columns"/>
