--- a/src/app/components/forms/tariffs-manages-form/tariffs-form.component.html
+++ b/src/app/components/forms/tariffs-manages-form/tariffs-form.component.html
@@ -133,6 +133,7 @@
       label="نوع بارگیر"
       optionLabel="LoaderTypeTitle"
       optionValue="LoaderTypeTitle"
+      [control]="LoaderTypeTitle"
       (selectSuggestion)="onSelectLoaderType($event)"
       (valueChange)="onAutoCompleteChange(LoaderTypeId)"
       [lazySearch]="onSearchLoaderType"
@@ -232,6 +233,3 @@
     </div>
   </form>
 </p-dialog>
-
-<!-- Confirm Dialog -->
-<p-confirm-dialog />
